services/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment
  name: nginx-service
spec:
  selector:
    app: nginx-deployment
  ports:
    - port: 80 # This is the external port
      targetPort: 80 # This matches the pod's port
      protocol: TCP
  type: ClusterIP
